--- a/yolov5_app.ipynb
+++ b/yolov5_app.ipynb
@@ -10,6 +10,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "eb4c62c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplatform\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msubprocess\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import platform\n",
+    "import subprocess\n",
+    "import os\n",
+    "\n",
+    "tf.random.set_seed(73)\n",
+    "TPU_INIT = False\n",
+    "\n",
+    "# Uncomment the following line to disable GPU support\n",
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
+    "\n",
+    "# Configure TensorFlow to use GPU memory efficiently\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "    try:\n",
+    "        for gpu in gpus:\n",
+    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "        print(f\"{len(gpus)} GPU(s) found and configured.\")\n",
+    "    except RuntimeError as e:\n",
+    "        print(\"Error configuring GPU memory:\", e)\n",
+    "else:\n",
+    "    print(\"No GPU found by TensorFlow.\")\n",
+    "\n",
+    "# Check GPU status depending on OS\n",
+    "system_platform = platform.system()\n",
+    "if system_platform in ['Linux', 'Darwin', 'Windows']:\n",
+    "    try:\n",
+    "        result = subprocess.run([\"nvidia-smi\"], stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)\n",
+    "        if result.returncode == 0:\n",
+    "            print(\"nvidia-smi output:\\n\", result.stdout)\n",
+    "        else:\n",
+    "            print(\"nvidia-smi not found or no NVIDIA GPU available.\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"nvidia-smi not found. Make sure NVIDIA drivers are installed.\")\n",
+    "else:\n",
+    "    print(f\"No NVIDIA GPU check supported for platform: {system_platform}\")\n",
+    "\n",
+    "print(\"TensorFlow version:\", tf.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "072b2af6",
    "metadata": {},
