--- a/yolov5_app.ipynb
+++ b/yolov5_app.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "eb4c62c2",
    "metadata": {},
    "outputs": [
@@ -27,44 +27,18 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "import platform\n",
-    "import subprocess\n",
     "import os\n",
-    "\n",
-    "tf.random.set_seed(73)\n",
-    "TPU_INIT = False\n",
-    "\n",
-    "# Uncomment the following line to disable GPU support\n",
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
-    "\n",
-    "# Configure TensorFlow to use GPU memory efficiently\n",
-    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
-    "if gpus:\n",
-    "    try:\n",
-    "        for gpu in gpus:\n",
-    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
-    "        print(f\"{len(gpus)} GPU(s) found and configured.\")\n",
-    "    except RuntimeError as e:\n",
-    "        print(\"Error configuring GPU memory:\", e)\n",
-    "else:\n",
-    "    print(\"No GPU found by TensorFlow.\")\n",
-    "\n",
-    "# Check GPU status depending on OS\n",
-    "system_platform = platform.system()\n",
-    "if system_platform in ['Linux', 'Darwin', 'Windows']:\n",
-    "    try:\n",
-    "        result = subprocess.run([\"nvidia-smi\"], stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)\n",
-    "        if result.returncode == 0:\n",
-    "            print(\"nvidia-smi output:\\n\", result.stdout)\n",
-    "        else:\n",
-    "            print(\"nvidia-smi not found or no NVIDIA GPU available.\")\n",
-    "    except FileNotFoundError:\n",
-    "        print(\"nvidia-smi not found. Make sure NVIDIA drivers are installed.\")\n",
-    "else:\n",
-    "    print(f\"No NVIDIA GPU check supported for platform: {system_platform}\")\n",
-    "\n",
-    "print(\"TensorFlow version:\", tf.__version__)\n"
+    "import sys\n",
+    "import subprocess\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "import yaml\n",
+    "import torch\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
