--- a/yolov5_app.ipynb
+++ b/yolov5_app.ipynb
@@ -27,18 +27,44 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
+    "import tensorflow as tf\n",
+    "import platform\n",
     "import subprocess\n",
-    "import shutil\n",
-    "from pathlib import Path\n",
-    "import yaml\n",
-    "import torch\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import os\n",
+    "\n",
+    "tf.random.set_seed(73)\n",
+    "TPU_INIT = False\n",
+    "\n",
+    "# Uncomment the following line to disable GPU support\n",
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
+    "\n",
+    "# Configure TensorFlow to use GPU memory efficiently\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "    try:\n",
+    "        for gpu in gpus:\n",
+    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "        print(f\"{len(gpus)} GPU(s) found and configured.\")\n",
+    "    except RuntimeError as e:\n",
+    "        print(\"Error configuring GPU memory:\", e)\n",
+    "else:\n",
+    "    print(\"No GPU found by TensorFlow.\")\n",
+    "\n",
+    "# Check GPU status depending on OS\n",
+    "system_platform = platform.system()\n",
+    "if system_platform in ['Linux', 'Darwin', 'Windows']:\n",
+    "    try:\n",
+    "        result = subprocess.run([\"nvidia-smi\"], stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)\n",
+    "        if result.returncode == 0:\n",
+    "            print(\"nvidia-smi output:\\n\", result.stdout)\n",
+    "        else:\n",
+    "            print(\"nvidia-smi not found or no NVIDIA GPU available.\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"nvidia-smi not found. Make sure NVIDIA drivers are installed.\")\n",
+    "else:\n",
+    "    print(f\"No NVIDIA GPU check supported for platform: {system_platform}\")\n",
+    "\n",
+    "print(\"TensorFlow version:\", tf.__version__)\n"
    ]
   },
   {
@@ -126,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
