--- a/yolov5_app.ipynb
+++ b/yolov5_app.ipynb
@@ -10,10 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3608f428",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Thesis (Python 3.10.18)' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages."
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e014c9c0",
    "metadata": {},
    "outputs": [],
@@ -49,13 +59,12 @@
     "    print(\"Installing dependencies\")\n",
     "\n",
     "    packages = [\n",
-    "        \"pillow\",\n",
-    "        \"tqdm\",\n",
-    "        \"tensorboard\",\n",
-    "        \"onnx\",\n",
-    "        \"onnxruntime\",\n",
-    "        \"tensorflow\",\n",
+    "        \"tensorboard==2.10.1\",\n",
+    "        \"onnx==1.12.0\",\n",
+    "        \"onnxruntime==1.22.1\",\n",
+    "        \"tensorflow==2.10.0\",\n",
     "        \"tf2onnx\",\n",
+    "        \"protobuf==3.18.3\"        \n",
     "    ]\n",
     "\n",
     "    for package in packages:\n",
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "818e3b24",
    "metadata": {},
    "outputs": [],
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e018eb54",
    "metadata": {},
    "outputs": [],
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d80ae10b",
    "metadata": {},
    "outputs": [],
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "82524da7",
    "metadata": {},
    "outputs": [],
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "5dbf4242",
    "metadata": {},
    "outputs": [],
@@ -422,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "05287a21",
    "metadata": {},
    "outputs": [],
@@ -604,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a15a69b7",
    "metadata": {},
    "outputs": [],
@@ -664,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5d0659d4",
    "metadata": {},
    "outputs": [],
@@ -813,7 +822,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "def main():\n",
     "    print(\"YOLOv5s Android Real-Time Detection Training\")\n",
     "\n",
@@ -920,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "975e2065",
    "metadata": {},
    "outputs": [],
@@ -970,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "5aac9253",
    "metadata": {},
    "outputs": [],
@@ -997,7 +1005,7 @@
     "        },\n",
     "    }\n",
     "\n",
-    "    with open(\"Thesis/training_config.yaml\", \"w\") as f:\n",
+    "    with open(\"../training_config.yaml\", \"w\") as f:\n",
     "        yaml.dump(config, f, default_flow_style=False)\n",
     "\n",
     "    print(\"Training configuration saved to Thesis/training_config.yaml\")"
@@ -1005,37 +1013,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7f746b5d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking system requirements\n",
-      "Python version: 3.10.18\n",
-      "PyTorch version: 1.12.1\n",
-      "CUDA available: True\n",
-      "CUDA version: 11.3\n",
-      "GPU count: 1\n",
-      "Available disk space: 50 GB\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Thesis/training_config.yaml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m      2\u001b[0m     check_system_requirements()\n\u001b[1;32m----> 3\u001b[0m     \u001b[43mcreate_training_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     main()\n",
-      "Cell \u001b[1;32mIn[30], line 23\u001b[0m, in \u001b[0;36mcreate_training_config\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mcreate_training_config\u001b[39m():\n\u001b[0;32m      2\u001b[0m     config \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\n\u001b[0;32m      4\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marchitecture\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myolov5s\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     20\u001b[0m         },\n\u001b[0;32m     21\u001b[0m     }\n\u001b[1;32m---> 23\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mThesis/training_config.yaml\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mw\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     24\u001b[0m         yaml\u001b[38;5;241m.\u001b[39mdump(config, f, default_flow_style\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining configuration saved to Thesis/training_config.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\USER\\miniconda3\\envs\\Thesis\\lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Thesis/training_config.yaml'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    check_system_requirements()\n",
